pihole/service-http.yaml
kind: Service
apiVersion: v1
metadata:
  name: pihole-web
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - name : http
      protocol: TCP
      port: 80
      targetPort: 80
